Add skeleton grid classes to figure and img tags, to allow them to resize dynamically.

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     <h1>Cutest Kitten Pageant</h1>
   </header>
   <main class="container">
-    <article>
+    <article class="twelve columns">
 
       <h2>Who's Cuter?</h2>
-      <div id="kitten_1" class="four columns offset-by-two">
-        <figure>
-          <img>
+      <div id="kitten_1" class="five columns offset-by-one">
+        <figure class="twelve columns">
+          <img class="twelve columns">
         </figure>
         <button class="vote_button">Cuter</button>
         <span class="user_opinion"></span>
       </div>
-      <div id="kitten_2" class="four columns">
-        <figure>
-          <img>
+      <div id="kitten_2" class="five columns">
+        <figure class="twelve columns">
+          <img class="twelve columns">
         </figure>
         <button class="vote_button">Cuter</button>
         <span class="user_opinion"></span>
       </div>
     </article>
-    <aside>
+    <aside class="twelve columns">
       <button id="more_kittens">We Need Your Help!</button>
     </aside>
   </main>
