Load JSON with links to imgur pics, set page to use those links. Style buttons with animations.

--- a/index.html
+++ b/index.html
@@ -7,26 +7,25 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
-  <header class="container">
+  <header>
     <h1>Cutest Kitten Pageant</h1>
   </header>
   <main class="container">
-    <article class="twelve columns">
-
+    <article>
       <h2>Who's Cuter?</h2>
       <div id="kitten_1" class="five columns offset-by-one">
         <figure class="twelve columns">
           <img class="twelve columns">
         </figure>
         <button class="vote_button">Cuter</button>
-        <span class="user_opinion"></span>
+        <span class="user_opinion twelve columns"></span>
       </div>
       <div id="kitten_2" class="five columns">
         <figure class="twelve columns">
           <img class="twelve columns">
         </figure>
         <button class="vote_button">Cuter</button>
-        <span class="user_opinion"></span>
+        <span class="user_opinion twelve columns"></span>
       </div>
     </article>
     <aside class="twelve columns">
