Make app sync with Firebase, so that votes are persistent.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <link rel="stylesheet" href="skeleton.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js"></script>
+  <script src="https://cdn.firebase.com/js/client/2.2.5/firebase.js"></script>
 </head>
 <body>
-  <header>
+  <header class="container">
     <h1>Cutest Kitten Pageant</h1>
   </header>
   <main class="container">
@@ -18,14 +20,14 @@
           <img class="twelve columns">
         </figure>
         <button class="vote_button">Cuter</button>
-        <span class="user_opinion twelve columns"></span>
+        <span class="user_opinion columns"></span>
       </div>
       <div id="kitten_2" class="five columns">
         <figure class="twelve columns">
           <img class="twelve columns">
         </figure>
         <button class="vote_button">Cuter</button>
-        <span class="user_opinion twelve columns"></span>
+        <span class="user_opinion columns"></span>
       </div>
     </article>
     <aside class="twelve columns">
