Make app correctly sync, so that votes are added to correct object. Fix reset button.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </aside>
   </main>
   <footer class="container">
-    <p></p>
+    <a id="firebase_reset" class="three columns offset-by-nine">Reset Database</a>
   </footer>
   <script src="script.js"></script>
 </body>
