Add server.js that allows the site to be served with Node.js

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </aside>
   </main>
   <footer class="container">
-    <a id="firebase_reset" class="three columns offset-by-nine">Reset Database</a>
+    <a id="firebase_reset" class="four columns offset-by-seven">Reset Database</a>
   </footer>
 </body>
 </html>
