--- a/html/404.html
+++ b/html/404.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>Cutest 404 Pageant</title>
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="skeleton.css">
 </head>
 <body>
-  <h3>404 Message? Not so cute!</h3>
+  <h2>404 Message? Not so cute!</h2>
 </body>
 </html>
