Add node version to package.json.

--- a/html/404.html
+++ b/html/404.html
@@ -4,8 +4,9 @@
   <title>Cutest 404 Pageant</title>
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="skeleton.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>404 Message? Not so cute!</h2>
+  <h3>404 Message? Not so cute!</h3>
 </body>
 </html>
