--- a/html/404.html
+++ b/html/404.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h3>404 Message? Not so cute!</h3>
+  <main class="Container">
+      <h2>404 Message? Not so cute!</h2>
+  </main>
 </body>
 </html>
